<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgColor">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:fitsSystemWindows="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:textSize="22sp"
                android:id="@+id/tvTitle"
                android:layout_marginTop="80dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/textHint"
                android:text="@string/create_account_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <ImageView
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:alpha="0.2"
                android:src="@drawable/logo_tentacle"
                android:layout_width="wrap_content"
                android:translationX="160dp"
                android:translationY="50dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <br.com.concrete.tentacle.custom.TentacleEditText
                style="@style/TextInputLayoutStyle"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                app:errorLabel="@string/email_error"
                app:label="@string/email"
                android:layout_marginTop="10dp"
                android:id="@+id/edtEmail"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <br.com.concrete.tentacle.custom.TentacleEditText
                style="@style/TextInputLayoutStyle"
                android:inputType="textCapWords"
                android:imeOptions="actionNext"
                app:errorLabel="@string/name_error"
                app:label="@string/register_name_hint"
                android:layout_marginTop="10dp"
                android:id="@+id/edtUserName"
                app:layout_constraintTop_toBottomOf="@id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <br.com.concrete.tentacle.custom.TentacleEditText
                style="@style/TextInputLayoutStyle"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                app:errorLabel="@string/password_error"
                app:label="@string/password"
                android:layout_marginTop="10dp"
                android:id="@+id/edtPassword"
                app:layout_constraintTop_toBottomOf="@id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <br.com.concrete.tentacle.custom.TentacleEditText
                style="@style/TextInputLayoutStyle"
                android:inputType="phone"
                android:imeOptions="actionNext"
                app:errorLabel="@string/phone_error"
                app:label="@string/register_ddd_phone_hint"
                android:layout_marginTop="10dp"
                android:id="@+id/edtPhone"
                app:layout_constraintTop_toBottomOf="@id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <br.com.concrete.tentacle.custom.TentacleSearchSpinner
                android:layout_marginTop="10dp"
                android:layout_marginEnd="4dp"
                app:errorLabel="@string/state_error"
                app:label="@string/state_hint"
                android:id="@+id/spState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="4"
                app:layout_constraintStart_toStartOf="@+id/edtPhone"
                app:layout_constraintTop_toBottomOf="@+id/edtPhone"/>


        <br.com.concrete.tentacle.custom.TentacleSearchSpinner
                app:errorLabel="@string/city_error"
                app:label="@string/city_hint"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginStart="4dp"
                android:id="@+id/spCity"
                app:layout_constraintTop_toTopOf="@+id/spState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_weight="6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/spState"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCreateAccount"
                android:textColor="#fff"
                android:text="@string/create_account"
                android:background="@color/colorAccent"
                android:layout_marginEnd="@dimen/margin_default"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/spState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>