<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <include layout="@layout/logo_tentacle"/>

    <br.com.concrete.tentacle.custom.ListCustom
            android:id="@+id/listMyReservations"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            app:layoutManager="LinearLayoutManager"
            app:buttonNameError="@string/btn_reservation_error_empty"
            app:errorDescription="@string/load_reservations_error_not_know"
            app:emptyListMessage="@string/load_reservations_empty_list"
            app:icon="@drawable/ilustra_tentacle"
            app:endLessScroll="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>