<?xml version="1.0" encoding="utf-8"?>
<navigation
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nav_host"
        app:startDestination="@+id/home">

    <fragment
        android:id="@+id/home"
        android:name="br.com.concrete.tentacle.features.home.HomeFragment"
        android:label="@string/toolbar_title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/myGames"
        android:name="br.com.concrete.tentacle.features.loadmygames.LoadMyGamesFragment"
        android:label="@string/toolbar_title_my_games"
        tools:layout="@layout/fragment_game_list"/>

    <fragment
        android:id="@+id/library"
        android:name="br.com.concrete.tentacle.features.library.LibraryFragment"
        android:label="@string/toolbar_title_library"
        tools:layout="@layout/fragment_library"/>

    <action
        app:popUpTo="@+id/nav_host"
        app:popUpToInclusive="true"
        android:id="@+id/navigate_to_home"
        app:destination="@+id/home"/>

    <action
        app:popUpTo="@+id/nav_host"
        app:popUpToInclusive="true"
        android:id="@+id/navigate_to_my_games"
        app:destination="@+id/myGames"/>

    <action
        app:popUpTo="@+id/nav_host"
        app:popUpToInclusive="true"
        android:id="@+id/navigate_to_library"
        app:destination="@+id/library"/>

</navigation>